[tool.poetry]
name = "news-blog"
version = "0.1.0"
description = ""
authors = ["Andrew <144724707+Andrii-Lykhovets@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
